<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/time_header"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/hour"
        android:textColor="#000"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/users_header"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/users"
        android:textColor="#000"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/free_spots_header"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/free_spots"
        android:textColor="#000"
        android:textSize="17sp"/>

</LinearLayout>